# rakoune

./: .gitignore  Cargo.toml  compile-shaders.sh  rectangular_packing_testing.py
shaders/: logo.frag  logo.vert  shader.frag  shader.vert  text.frag  text.vert
src/: font.rs  gpu_primitives.rs  main.rs  render.rs  state.rs
src/render/: logo.rs  mod.rs
src/render/text/: glypher.rs  mod.rs  text_gpu_primitives.rs
