[package]
name = "rakoune"
version = "0.1.0"
authors = ["loovjo <jonathan.loov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harfbuzz_rs = "1.1"
rusttype = "0.9"

wgpu = "0.5"
winit = "0.22"

futures = "0.3"
bytemuck = "1.2"

image = "0.23"