[package]
name = "rakoune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
fontdue = "0.7.3"
futures = "0.3.28"
harfbuzz_rs = "2.0.1"
thiserror = "1.0.49"
ttf-parser = "0.19.2"
wgpu = "0.17.1"
winit = "0.28.7"
